src/test/deca/context/invalid/declClass-wrongSignatureOrder.context
declClass-wrongSignatureOrder.deca:9: